--- a/client/src/product/center/center.scss
+++ b/client/src/product/center/center.scss
@@ -1,26 +1,25 @@
-$preview-width:45px;
+$preview-width: 45px;
 $preview-height: 45px;
-$scale-ratio:1.15;
-$neo-color:#CCD600;
+$scale-ratio: 1.15;
 
-.center{
+.center {
   display: flex;
   flex-direction: column;
   align-items: center;
   // border: 1px solid red;
-  .main-image{
+  .main-image {
     display: flex;
     justify-content: center;
     height: 75%;
-    img{
+    img {
       max-width: 100%;
       object-fit: cover;
     }
   }
 }
 
-.preview-list{
-  padding-top: 3.0rem;
+.preview-list {
+  padding-top: 3rem;
   display: flex;
   width: 100%;
   justify-content: center;
@@ -29,57 +28,48 @@ $neo-color:#CCD600;
   gap: 1.2rem;
 }
 
-.preview-container{
+.preview-container {
   border-radius: 50%;
 }
 
-.neon{
+.neon {
   position: absolute;
   width: $preview-width;
   height: $preview-height;
   border-radius: 50%;
   z-index: 1;
-  background: #8C8C8C;
+  background: #8c8c8c;
   opacity: 0.4;
   cursor: pointer;
-  transition: box-shadow 0.4s ease-in-out, 
-              background 0.4s ease-in, 
-              opacity 0.3s ease-out;
+  transition: box-shadow 0.4s ease-in-out, background 0.4s ease-in,
+    opacity 0.3s ease-out;
   outline: none;
   border: none;
-  &:hover{
-    box-shadow:
-            0 0 5px $neo-color,
-            0 0 6px $neo-color;
+  &:hover {
+    box-shadow: 0 0 5px var(--accent), 0 0 6px var(--accent);
     opacity: 1;
     background: transparent;
   }
-  &.selected{
+  &.selected {
     animation: zoom-in-zoom-out 0.6s ease-in forwards;
     background: none;
     opacity: 1;
-    box-shadow:
-      0 0 1px $neo-color,
-      0 0 2px $neo-color,
-      0 0 3px $neo-color,
-      0 0 5px $neo-color,
-      0 0 5px $neo-color,
-      0 0 6px $neo-color;
-    }
+    box-shadow: 0 0 1px var(--accent), 0 0 2px var(--accent),
+      0 0 3px var(--accent), 0 0 5px var(--accent), 0 0 5px var(--accent),
+      0 0 6px var(--accent);
+  }
 }
 
-@supports (-moz-appearance: none){
-  .neon{
-    &.selected{
-       outline: 1px solid $neo-color;
-    box-shadow:
-            0 0 5px $neo-color,
-            0 0 6px $neo-color;
+@supports (-moz-appearance: none) {
+  .neon {
+    &.selected {
+      outline: 1px solid var(--accent);
+      box-shadow: 0 0 5px var(--accent), 0 0 6px var(--accent);
     }
   }
 }
 
-.preview{
+.preview {
   width: $preview-width;
   height: $preview-height;
   border-radius: 50%;
@@ -89,7 +79,7 @@ $neo-color:#CCD600;
   display: flex;
   justify-content: center;
   align-items: center;
-  div{
+  div {
     width: 50px;
     height: 50px;
     display: flex;
@@ -97,7 +87,7 @@ $neo-color:#CCD600;
     align-items: center;
   }
 
-  img{
+  img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -114,6 +104,6 @@ $neo-color:#CCD600;
     transform: scale($scale-ratio);
   }
   100% {
-    transform: scale($scale-ratio,$scale-ratio);
+    transform: scale($scale-ratio, $scale-ratio);
   }
 }
