--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,7 +1,3 @@
-html {
-  background-color: black;
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -46,10 +42,12 @@ main {
   }
 }
 
-@import "header/";
+@import "themes";
 
-@import "product/product";
+@import "../header";
 
-@import "homepage/homepage";
+@import "../product/product";
+
+@import "../homepage/homepage";
 
 @import "media";
