--- a/client/src/product/right/right.scss
+++ b/client/src/product/right/right.scss
@@ -4,9 +4,9 @@
     padding-left: 6.6rem;
     padding-right: 1.8rem;
   }
-  .container >*{
-    padding-bottom: 1.2rem;
-  }
+  // .container >*{
+  //   padding-bottom: 1.2rem;
+  // }
   
   .shaft{
     display: flex;
@@ -19,14 +19,10 @@
   }
 
   .image-container{
-      width: 40px;
-      height: 40px;
-      overflow: hidden;
-      border-radius: 50%;
       img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
       }
   }
 }
