--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,3 +1,5 @@
+@import "themes";
+
 * {
   padding: 0;
   margin: 0;
@@ -12,6 +14,10 @@
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently
                        supported by Chrome, Edge, Opera and Firefox*/
+}
+
+#root {
+  background: var(--bg);
 }
 
 main {
@@ -42,7 +48,7 @@ main {
   }
 }
 
-@import "themes";
+@import "../components";
 
 @import "../header";
 
