--- a/client/src/homepage/homepage.scss
+++ b/client/src/homepage/homepage.scss
@@ -1,13 +1,74 @@
 .homepage {
-  background: var(--bg-dark);
+  $border-radius: 0.6rem;
+  .container {
+    background: var(--bg);
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .category {
+    h2 {
+      font-weight: 400;
+      margin-bottom: 1rem;
+    }
+    .item-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 240px));
+      justify-content: space-between;
+    }
+  }
+
+  .carousel {
+    width: 80%;
+    margin: 4rem auto;
+    height: 70vh;
+    border-radius: 1rem;
+    border: 1px solid var(--border);
+    background: var(--standout);
+    box-shadow: var(--medium-box-shadow);
+  }
+
+  .card {
+    border-radius: $border-radius;
+    padding-bottom: 0;
+    height: 350px;
+    @include transition;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: var(--medium-box-shadow);
+    }
+
+    &:active{
+        box-shadow: var(--medium-inset-box-shadow);
+    }
+  }
+
+  .product-card {
+    padding: 0.3rem;
+    .bottom {
+      display: flex;
+      flex-direction: column;
+      gap: 0.3rem;
+    }
+  }
+
   .image-container {
-    width: 95%;
-    height: 100%;
-    margin: 3rem auto;
-    border: 1px solid red;
+    height: 65%;
+    margin: 0 auto;
+    @include transition;
     img {
       width: 100%;
       height: 100%;
+      border-radius: $border-radius;
+      &:hover {
+        opacity: 0.9;
+      }
     }
+    margin-bottom: 1rem;
+  }
+
+  .category{
+    padding-bottom: 3rem;
   }
 }
