--- a/client/src/homepage/homepage.scss
+++ b/client/src/homepage/homepage.scss
@@ -34,6 +34,7 @@
     height: 350px;
     @include transition;
     cursor: pointer;
+    color: var(--text);
 
     &:hover {
       box-shadow: var(--medium-box-shadow);
