--- a/client/src/components/button/button.scss
+++ b/client/src/components/button/button.scss
@@ -2,12 +2,15 @@
   cursor: pointer;
   padding: 0.7rem 1.5rem;
   box-sizing: border-box;
-  border: none;
   background: var(--bg);
-
+  border: none;
   @include transition();
 
   @include usingBorderRadiusMixin();
+
+  &.border{
+    border: 1px solid var(--border);
+  }
 
   &:active {
     @include usingInsetBoxShadowMixin();
@@ -18,14 +21,13 @@
     @include usingBoxShadowMixin();
   }
 
-  &.checkout-btn {
-    color: var(--text-standout);
-  }
-
   &.disabled {
-    color: var(--text-dim);
-    background: var(--bg-dim);
+    // color: var(--text-dim) !important;
+    background: var(--bg-dim) !important;
     &:active {
+      box-shadow: none !important;
+    }
+    &:hover{
       box-shadow: none !important;
     }
   }
