--- a/client/src/header/index.scss
+++ b/client/src/header/index.scss
@@ -111,4 +111,13 @@ header {
       color: var(--text-light);
     }
   }
+
+  .header-user {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+  }
 }
