--- a/client/src/components/index.scss
+++ b/client/src/components/index.scss
@@ -1,2 +1,6 @@
 @import "option/options";
-@import "button/button"
+@import "button/button";
+@import "group-controls";
+@import "select";
+@import "snackbar";
+@import "alert";
