--- a/client/src/product/product.scss
+++ b/client/src/product/product.scss
@@ -13,6 +13,7 @@
     width: 66.66%;
     display: flex;
     justify-content: space-evenly;
+    align-items: flex-start;
 
     &>*{
       width: 100%;
