--- a/client/src/product/right/right.scss
+++ b/client/src/product/right/right.scss
@@ -3,6 +3,7 @@
   .container {
     padding-left: 6.6rem;
     padding-right: 1.8rem;
+    overflow: hidden;
   }
 
   .shaft {
@@ -17,14 +18,21 @@
 
   .image-container {
     @include usingInsetBoxShadowMixin();
-      border-radius: 50%;
-      padding: 0.3rem;
-      display: flex;
-      justify-content: center;
+    border-radius: 50%;
+    padding: 0.3rem;
+    display: flex;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
     img {
-      /* width: 40px; */
-      /* height: 40px; */
+      object-fit: cover;
       border-radius: 50%;
     }
+  }
+}
+.shaft-chevron-right{
+  opacity: 0;
+  path{
+    stroke: var(--text);
   }
 }
