--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -56,9 +56,9 @@ main {
   cursor: pointer;
 }
 
-.pop:active {
-  animation: pop 0.1s ease-out;
-}
+/* .pop:active { */
+/*   animation: pop 0.1s ease-out; */
+/* } */
 
 @keyframes pop {
   0% {
