--- a/client/src/product/center/center.scss
+++ b/client/src/product/center/center.scss
@@ -10,9 +10,61 @@ $scale-ratio: 1.15;
     display: flex;
     justify-content: center;
     height: 75%;
+    position: relative;
     img {
       max-width: 100%;
       object-fit: cover;
+    }
+  }
+  .fading-panel-bottom {
+    height: 20%;
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+    @media (prefers-color-scheme: dark) {
+      background: linear-gradient(
+        hsla(0, 0%, 18%, 0) 30%,
+        hsla(0, 0%, 18%, 0.9) 70%
+      );
+    }
+  }
+  .fading-panel-right {
+    position: absolute;
+    width: 10%;
+    height: 100%;
+    bottom: 0;
+    right: 0;
+    @media (prefers-color-scheme: dark) {
+      background: linear-gradient(
+        90deg,
+        hsla(0, 0%, 18%, 0) 30%,
+        hsla(0, 0%, 18%, 0.9) 70%
+      );
+    }
+  }
+  .fading-panel-left {
+    position: absolute;
+    width: 10%;
+    height: 100%;
+    left: 0;
+    @media (prefers-color-scheme: dark) {
+      background: linear-gradient(
+        -90deg,
+        hsla(0, 0%, 18%, 0) 30%,
+        hsla(0, 0%, 18%, 0.9) 70%
+      );
+    }
+  }
+  .fading-panel-top {
+    position: absolute;
+    width: 100%;
+    height: 10%;
+    top: 0;
+    @media (prefers-color-scheme: dark) {
+      background: linear-gradient(
+        hsla(0, 0%, 18%, 0.9) 30%,
+        hsla(0, 0%, 18%, 0) 70%
+      );
     }
   }
 }
